# sales-brochure-generator

./: .gitignore  README.md  config.py  main.py  pyproject.toml  rxconfig.py  sample.env
sales_brochure_generator/: __init__.py  sales_brochure_generator.py
sales_brochure_generator/services/: __init__.py  llm.py
sales_brochure_generator/utils/: __init__.py  markdown_to_pdf.py  scraper.py
